// <auto-generated />
using System;
using HotelSysteem.Data;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;

#nullable disable

namespace HotelSysteem.Migrations
{
    [DbContext(typeof(HotelContext))]
    [Migration("20260121114058_MaakReserveringKlassen")]
    partial class MaakReserveringKlassen
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "9.0.12")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("HotelSysteem.Models.HotelKamer", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<int>("Nummer")
                        .HasColumnType("int");

                    b.Property<int>("VoorzieningenId")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("VoorzieningenId")
                        .IsUnique();

                    b.ToTable("HotelKamers");
                });

            modelBuilder.Entity("HotelSysteem.Models.HotelKamerBed", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("Omschrijving")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.ToTable("Bedden");
                });

            modelBuilder.Entity("HotelSysteem.Models.HotelKamerBedden", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<int>("Aantal")
                        .HasColumnType("int");

                    b.Property<int>("BedId")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("BedId");

                    b.ToTable("Beddens");
                });

            modelBuilder.Entity("HotelSysteem.Models.HotelKamerReservering", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<int>("AantalPersonen")
                        .HasColumnType("int");

                    b.Property<int>("KamerId")
                        .HasColumnType("int");

                    b.Property<int>("ReserveringId")
                        .HasColumnType("int");

                    b.Property<int>("TariefId")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("ReserveringId");

                    b.HasIndex("TariefId");

                    b.ToTable("HotelKamerReserveringen");
                });

            modelBuilder.Entity("HotelSysteem.Models.HotelKamerTarief", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<DateOnly>("GeldigTot")
                        .HasColumnType("date");

                    b.Property<DateOnly>("GeldingVan")
                        .HasColumnType("date");

                    b.Property<int?>("KamerId")
                        .HasColumnType("int");

                    b.Property<int>("Tarief")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("KamerId");

                    b.ToTable("HotelKamerTarievens");
                });

            modelBuilder.Entity("HotelSysteem.Models.HotelKamerVoorzieningen", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<int>("Badkamers")
                        .HasColumnType("int");

                    b.Property<bool>("Balkon")
                        .HasColumnType("bit");

                    b.Property<int?>("KamerId")
                        .HasColumnType("int");

                    b.Property<int>("Oppervlakte")
                        .HasColumnType("int");

                    b.Property<int>("Slaapkamers")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.ToTable("Voorzieningens");
                });

            modelBuilder.Entity("HotelSysteem.Models.HotelKamerVoorzieningenBedden", b =>
                {
                    b.Property<int>("BeddenId")
                        .HasColumnType("int");

                    b.Property<int>("VoorzieningenId")
                        .HasColumnType("int");

                    b.HasKey("BeddenId", "VoorzieningenId");

                    b.HasIndex("VoorzieningenId");

                    b.ToTable("HotelKamerBeddenHotelKamerVoorzieningen", (string)null);
                });

            modelBuilder.Entity("HotelSysteem.Models.HotelRekening", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<bool>("Betaald")
                        .HasColumnType("bit");

                    b.Property<int>("Korting")
                        .HasColumnType("int");

                    b.Property<int>("ToeristenBelasting")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.ToTable("HotelRekeningen");
                });

            modelBuilder.Entity("HotelSysteem.Models.HotelReservering", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<DateOnly>("BeginDatum")
                        .HasColumnType("date");

                    b.Property<DateOnly>("EindDatum")
                        .HasColumnType("date");

                    b.Property<string>("Emailaddres")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Naam")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("RekeningId")
                        .HasColumnType("int");

                    b.Property<string>("TelefoonNummer")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.HasIndex("RekeningId");

                    b.ToTable("HotelReserveringen");
                });

            modelBuilder.Entity("HotelSysteem.Models.HotelKamer", b =>
                {
                    b.HasOne("HotelSysteem.Models.HotelKamerVoorzieningen", "Voorzieningen")
                        .WithOne("Kamer")
                        .HasForeignKey("HotelSysteem.Models.HotelKamer", "VoorzieningenId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Voorzieningen");
                });

            modelBuilder.Entity("HotelSysteem.Models.HotelKamerBedden", b =>
                {
                    b.HasOne("HotelSysteem.Models.HotelKamerBed", "Bed")
                        .WithMany("Bedden")
                        .HasForeignKey("BedId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Bed");
                });

            modelBuilder.Entity("HotelSysteem.Models.HotelKamerReservering", b =>
                {
                    b.HasOne("HotelSysteem.Models.HotelKamer", "Kamer")
                        .WithMany("Reserveringen")
                        .HasForeignKey("ReserveringId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("HotelSysteem.Models.HotelReservering", "Reservering")
                        .WithMany("KamerReserveringen")
                        .HasForeignKey("ReserveringId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("HotelSysteem.Models.HotelKamerTarief", "Tarief")
                        .WithMany("Reserveringen")
                        .HasForeignKey("TariefId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Kamer");

                    b.Navigation("Reservering");

                    b.Navigation("Tarief");
                });

            modelBuilder.Entity("HotelSysteem.Models.HotelKamerTarief", b =>
                {
                    b.HasOne("HotelSysteem.Models.HotelKamer", "Kamer")
                        .WithMany("Tarieven")
                        .HasForeignKey("KamerId");

                    b.Navigation("Kamer");
                });

            modelBuilder.Entity("HotelSysteem.Models.HotelKamerVoorzieningenBedden", b =>
                {
                    b.HasOne("HotelSysteem.Models.HotelKamerBedden", null)
                        .WithMany()
                        .HasForeignKey("BeddenId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("HotelSysteem.Models.HotelKamerVoorzieningen", null)
                        .WithMany()
                        .HasForeignKey("VoorzieningenId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("HotelSysteem.Models.HotelReservering", b =>
                {
                    b.HasOne("HotelSysteem.Models.HotelRekening", "Rekening")
                        .WithMany("Reserveringen")
                        .HasForeignKey("RekeningId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Rekening");
                });

            modelBuilder.Entity("HotelSysteem.Models.HotelKamer", b =>
                {
                    b.Navigation("Reserveringen");

                    b.Navigation("Tarieven");
                });

            modelBuilder.Entity("HotelSysteem.Models.HotelKamerBed", b =>
                {
                    b.Navigation("Bedden");
                });

            modelBuilder.Entity("HotelSysteem.Models.HotelKamerTarief", b =>
                {
                    b.Navigation("Reserveringen");
                });

            modelBuilder.Entity("HotelSysteem.Models.HotelKamerVoorzieningen", b =>
                {
                    b.Navigation("Kamer");
                });

            modelBuilder.Entity("HotelSysteem.Models.HotelRekening", b =>
                {
                    b.Navigation("Reserveringen");
                });

            modelBuilder.Entity("HotelSysteem.Models.HotelReservering", b =>
                {
                    b.Navigation("KamerReserveringen");
                });
#pragma warning restore 612, 618
        }
    }
}
